we change just the index of the burgerr

--- a/homepage/index2.html
+++ b/homepage/index2.html
@@ -63,7 +63,7 @@
                 <button id="productManagerBtn" class="menuOption">
                 <a href="http://127.0.0.1:5500/burgers/responsive-burger-website/index.html">   <i class="ri-restaurant-fill"></i></a>
                
-                <a href="http://127.0.0.1:5500/burgers/responsive-burger-website/index.html"> <h5 class="menuText open2">Burgers</h5></a>
+                <a href="/burgerrr/indexbur.html"> <h5 class="menuText open2">Burgers</h5></a>
                 </button>
             </li>
 
